--- a/PokemonGo/RocketAPI/Console/external.config
+++ b/PokemonGo/RocketAPI/Console/external.config
@@ -2,6 +2,7 @@
   <add key="AuthType" value="Google" />  <!--Google/Ptc-->
   <add key="PtcUsername" value="username" />  <!--Username-->
   <add key="PtcPassword" value="pw" />  <!--Password-->
+  <add key="GoogleRefreshToken" value="" />
   <add key="DefaultLatitude" value="45.030152" />  
   <add key="DefaultLongitude" value="-93.31931" />  
   <add key="LevelOutput" value="time" />  <!--2 Modes: "time": Every XXX seconds and "levelup" every levelup-->
